WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158322
CanvasRenderingContext2D.createPattern() / putImageData() throw wrong exception type
https://bugs.webkit.org/show_bug.cgi?id=158322
Summary
CanvasRenderingContext2D.createPattern() / putImageData() throw wrong excepti...
Chris Dumez
Reported
2016-06-02 15:42:28 PDT
CanvasRenderingContext2D.createPattern() / putImageData() throws wrong exception type when the first parameter is null. It should throw a TypeError but it currently throws a legacy TYPE_MISMATCH_ERR:
http://www.w3.org/TR/2dcontext/#canvasrenderingcontext2d
http://www.w3.org/TR/2dcontext/#canvasimagesource
Attachments
WIP patch
(12.03 KB, patch)
2016-06-02 16:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(12.03 KB, patch)
2016-06-02 16:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-yosemite
(1.24 MB, application/zip)
2016-06-02 17:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(1.28 MB, application/zip)
2016-06-02 17:33 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(901.71 KB, application/zip)
2016-06-02 17:48 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews115 for mac-yosemite
(1.52 MB, application/zip)
2016-06-02 17:51 PDT
,
Build Bot
no flags
Details
Patch
(19.28 KB, patch)
2016-06-02 18:45 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-06-02 16:03:27 PDT
Created
attachment 280379
[details]
WIP patch
Chris Dumez
Comment 2
2016-06-02 16:52:11 PDT
Created
attachment 280384
[details]
WIP Patch
Build Bot
Comment 3
2016-06-02 17:26:21 PDT
Comment on
attachment 280384
[details]
WIP Patch
Attachment 280384
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1425561
New failing tests: canvas/philip/tests/2d.pattern.image.null.html canvas/philip/tests/2d.pattern.image.undefined.html canvas/philip/tests/2d.imageData.put.null.html imported/w3c/canvas/2d.pattern.image.undefined.html
Build Bot
Comment 4
2016-06-02 17:26:25 PDT
Created
attachment 280390
[details]
Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-06-02 17:33:50 PDT
Comment on
attachment 280384
[details]
WIP Patch
Attachment 280384
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1425582
New failing tests: canvas/philip/tests/2d.pattern.image.null.html canvas/philip/tests/2d.pattern.image.undefined.html canvas/philip/tests/2d.imageData.put.null.html imported/w3c/canvas/2d.pattern.image.undefined.html
Build Bot
Comment 6
2016-06-02 17:33:54 PDT
Created
attachment 280391
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-06-02 17:48:29 PDT
Comment on
attachment 280384
[details]
WIP Patch
Attachment 280384
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1425624
New failing tests: imported/w3c/canvas/2d.pattern.image.undefined.html canvas/philip/tests/2d.pattern.image.undefined.html canvas/philip/tests/2d.imageData.put.null.html canvas/philip/tests/2d.pattern.image.null.html
Build Bot
Comment 8
2016-06-02 17:48:33 PDT
Created
attachment 280393
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 9
2016-06-02 17:51:21 PDT
Comment on
attachment 280384
[details]
WIP Patch
Attachment 280384
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1425637
New failing tests: imported/w3c/canvas/2d.pattern.image.undefined.html canvas/philip/tests/2d.pattern.image.undefined.html canvas/philip/tests/2d.imageData.put.null.html canvas/philip/tests/2d.pattern.image.null.html
Build Bot
Comment 10
2016-06-02 17:51:25 PDT
Created
attachment 280394
[details]
Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Chris Dumez
Comment 11
2016-06-02 18:45:57 PDT
Created
attachment 280398
[details]
Patch
Chris Dumez
Comment 12
2016-06-02 22:28:24 PDT
Relevant Web IDL section:
https://heycam.github.io/webidl/#es-interface
Chris Dumez
Comment 13
2016-06-03 15:25:29 PDT
Comment on
attachment 280398
[details]
Patch Clearing flags on attachment: 280398 Committed
r201664
: <
http://trac.webkit.org/changeset/201664
>
Chris Dumez
Comment 14
2016-06-03 15:25:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug